fixed display bug where long number outputs would overflow output container

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,6 +84,7 @@
 .output {
   text-align: left;
   max-width: 900px;
+  overflow-wrap: break-word;
 }
 
 div .rendered-markdown {
